fix: adjust order title alignment

--- a/packages/core/src/components/account/orders/MyAccountOrderDetails/section.module.scss
+++ b/packages/core/src/components/account/orders/MyAccountOrderDetails/section.module.scss
@@ -20,12 +20,11 @@
   // --------------------------------------------------------
 
   // Default properties
-  --fs-order-details-padding                        : var(--fs-spacing-5) 20px;
+  --fs-order-details-padding                        : 0 20px;
 
   // Header
   --fs-order-details-header-gap                     : var(--fs-spacing-3);
-  --fs-order-details-header-margin-bottom           : var(--fs-spacing-4);
-  --fs-order-details-header-padding                 : 0;
+  --fs-order-details-header-padding                 : var(--fs-spacing-5) 0 var(--fs-spacing-4);
   --fs-order-details-header-weight                  : var(--fs-text-weight-semibold);
   --fs-order-details-header-size                    : var(--fs-text-size-4);
   --fs-order-details-header-line-height             : 1.33;
@@ -50,34 +49,40 @@
     align-items: flex-start;
     justify-content: space-between;
     padding: var(--fs-order-details-header-padding);
-    margin-bottom: var(--fs-order-details-header-margin-bottom);
 
-    @include media (">tablet") {
+    @include media (">=tablet") {
       --fs-order-details-header-gap                 : var(--fs-spacing-2);
-      --fs-order-details-header-margin-bottom       : 0;
-      --fs-order-details-header-padding             : var(--fs-spacing-6) 0;
 
       flex-flow: row;
       align-items: center;
+    }
+
+    @include media (">=notebook") {
+      --fs-order-details-header-padding             : var(--fs-spacing-6) 0;
     }
 
     [data-fs-order-details-header-title] {
       display: flex;
       flex-direction: row;
       gap: var(--fs-spacing-1);
-      align-items: center;
+      align-items: flex-start;
 
       [data-fs-order-details-header-back-button] {
         flex-shrink: 0;
+        margin-top: calc(var(--fs-spacing-2) * -1); // Align the back button with the title
+
+        @include media(">=notebook") {
+          margin-top: calc(var(--fs-spacing-1) * -1); // Align the back button with the title
+        }
       }
 
       [data-fs-order-details-header-title-wrapper] {
         display: flex;
         flex-direction: column;
         gap: var(--fs-spacing-1);
-        align-items: center;
+        align-items: flex-start;
 
-        @include media(">tablet") {
+        @include media(">=tablet") {
           flex-flow: row wrap;
           align-items: center;
         }
